# crud-rust

./: .env  .env-sample  Cargo.toml  README.md
.sqlx/: query-073cd0e0be2eeee169fff8cfd8fc573e157403b4988b67196db6346f14786b84.json  query-2bbc117b306e1611959bc026941b298a0ee37fd69b189562aa872b9b1fbe083c.json  query-335eab911b671f1d516a643fdb5aa0c6cbad13a715d6c49fe667952595f0bb4d.json  query-878a678f30392169d3ab323f0d694cfeff3de228fe23fb1d982687b185c829a9.json  query-9a4fe63293519dc9229a5f3a330585bf70729a61fb340ec811908845a5ade620.json  query-dc0c4cc12ccced85c162523df99ce92435098be9d2a5c25935f8991ac3ab0d62.json
migrations/: 20250107040858_user_table.up.sql
src/: auth.rs  config.rs  db.rs  dtos.rs  error.rs  main.rs  models.rs
src/handler/: auth.rs  users.rs
src/utils/: password.rs  token.rs
